[package]
name = "spsc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async_tokio", "html_reports"] }
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }

# using 'loomer' in cfg because otherwise conflicts with tokio's internal use of 'loom' and fails
# to compile
[target.'cfg(loomer)'.dependencies]
loom = "0.5.4"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "throughput_async"
harness = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = 'fat'
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false
