[package]
name = "gil"
version = "0.2.2"
edition = "2024"
authors = ["Abhik Jain <abhik@abhikjain.xyz>"]
description = "A fast single-producer single-consumer queue with sync and async support"
license = "MIT"
repository = "https://github.com/abhikjain360/gil"
documentation = "https://docs.rs/gil"
homepage = "https://github.com/abhikjain360/gil"
keywords = ["queue", "spsc", "channel", "async", "lock-free"]
categories = ["concurrency", "data-structures", "asynchronous"]
readme = "README.md"
exclude = [".lazy.lua"]

[dependencies]
futures = "0.3.31"

[dev-dependencies]
bounded-spsc-queue = "0.4.0"
criterion = { version = "0.8.0", features = ["async_tokio", "html_reports"] }
crossbeam-channel = "0.5.15"
flume = "0.11.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

# using 'loomer' in cfg because otherwise conflicts with tokio's internal use of 'loom' and fails
# to compile
[target.'cfg(loomer)'.dependencies]
loom = { version = "0.7.2", features = ["futures"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loomer)'] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "throughput_async"
harness = false

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "comparison"
harness = false

[profile.release]
opt-level = 3
debug = false
strip = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[profile.bench]
# Enable debug symbols for benchmarks, but keep optimizations
debug = false
opt-level = 3
lto = 'fat'
incremental = false
codegen-units = 1
rpath = false
